:hammer: updated api schema
